--- a/app/src/main/res/drawable-anydpi/ic_archiology.xml
+++ b/app/src/main/res/drawable-anydpi/ic_archiology.xml
@@ -3,9 +3,9 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="#FFFFFF"
-    android:alpha="0.8">
+    android:tint="#009688"
+    >
   <path
-      android:fillColor="@android:color/white"
+      android:fillColor="#009688"
       android:pathData="M14,6l-3.75,5 2.85,3.8 -1.6,1.2C9.81,13.75 7,10 7,10l-6,8h22L14,6z"/>
 </vector>
