--- a/app/src/main/res/drawable-anydpi/ic_computer.xml
+++ b/app/src/main/res/drawable-anydpi/ic_computer.xml
@@ -3,9 +3,9 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="#FFFFFF"
-    android:alpha="0.8">
+    android:tint="#009688"
+    >
   <path
-      android:fillColor="@android:color/white"
+      android:fillColor="#009688"
       android:pathData="M20,18c1.1,0 1.99,-0.9 1.99,-2L22,6c0,-1.1 -0.9,-2 -2,-2H4c-1.1,0 -2,0.9 -2,2v10c0,1.1 0.9,2 2,2H0v2h24v-2h-4zM4,6h16v10H4V6z"/>
 </vector>
