--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -53,9 +53,13 @@
         app:layout_constraintGuide_percent="0.33" />
 
     <TableLayout
+        android:id="@+id/tableLayout"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:weightSum="5"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -65,7 +69,7 @@
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="30dp"
+            android:layout_marginBottom="50dp"
             android:weightSum="3">
 
             <TextView
@@ -88,7 +92,7 @@
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="30dp"
+            android:layout_marginBottom="50dp"
             android:weightSum="3">
 
             <TextView
@@ -111,7 +115,7 @@
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="30dp"
+            android:layout_marginBottom="50dp"
             android:weightSum="3">
 
             <TextView
@@ -134,7 +138,7 @@
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="30dp"
+            android:layout_marginBottom="50dp"
             android:weightSum="3">
 
             <TextView
@@ -147,7 +151,7 @@
             <TextView
                 android:id="@+id/degrees_profile"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="2"
                 android:ems="10"
                 android:inputType="textPersonName"
@@ -164,9 +168,9 @@
                 android:id="@+id/reset_password_profile"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="15dp"
                 android:layout_marginRight="5dp"
-                android:layout_weight="3"
+                android:layout_weight="1"
                 android:background="@drawable/costum_button"
                 android:text="reset password" />
 
@@ -175,7 +179,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
-                android:layout_marginRight="35dp"
+                android:layout_marginRight="15dp"
+                android:layout_weight="1"
                 android:background="@drawable/costum_button"
                 android:text="edit profile" />
         </TableRow>
