--- a/app/src/main/res/drawable-anydpi/ic_layers.xml
+++ b/app/src/main/res/drawable-anydpi/ic_layers.xml
@@ -3,9 +3,9 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="#FFFFFF"
-    android:alpha="0.8">
+    android:tint="#009688"
+    >
   <path
-      android:fillColor="@android:color/white"
+      android:fillColor="#009688"
       android:pathData="M11.99,18.54l-7.37,-5.73L3,14.07l9,7 9,-7 -1.63,-1.27 -7.38,5.74zM12,16l7.36,-5.73L21,9l-9,-7 -9,7 1.63,1.27L12,16z"/>
 </vector>
