--- a/app/src/main/res/drawable-anydpi/ic_privacy.xml
+++ b/app/src/main/res/drawable-anydpi/ic_privacy.xml
@@ -4,7 +4,8 @@
     android:viewportWidth="24"
     android:viewportHeight="24"
     android:tint="#FFFFFF"
-    android:autoMirrored="true">
+    android:autoMirrored="true"
+    >
   <path
       android:fillColor="@android:color/white"
       android:pathData="M2.01,21L23,12 2.01,3 2,10l15,2 -15,2z"/>
