--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,27 +8,13 @@
     tools:context=".mains.MainActivity">
 
     <ImageView
-        android:id="@+id/s4sName"
-        android:layout_width="135dp"
-        android:layout_height="58dp"
+        android:id="@+id/logo_option_2"
+        android:layout_width="176dp"
+        android:layout_height="128dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.37"
-        app:srcCompat="@drawable/whites4s" />
-
-    <ImageView
-        android:id="@+id/imageLogo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:foregroundGravity="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.583"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/s4sName"
-        app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@drawable/logowhite" />
+        app:srcCompat="@drawable/logo_option_3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
